# Rolpens

./: .gitignore  Dockerfile  README.md  coreutils-O3.csv  createLoops.c  createloops.sh  getresults.sh  pyproject.toml  setup.py  testloop.c  testloops.c
createloopsscript/: cleanup.sh  createloops.py  createloops.sh  loopy.py
data/: all_unrolled.csv  na-decompilatie-coreutils.csv  rerolled-coreutils.csv  rerolled-openssl.csv  vergelijking-coreutils-compleet.csv  vergelijking-coreutils.csv  vergelijking-godot-compleet.csv  vergelijking-godot.csv  vergelijking-openssl-compleet.csv  vergelijking-openssl.csv  voor-compilatie.csv
loopunrollingscripts/: .gitignore  Makefile  README.md  dump-syntax-tree.py  forloop.txt  formatter.py  level-0-not-working-for-rerolling-out.c  level-0-not-working-for-rerolling.c  level-0.c  level0.txt  level0Unrolling.py  level0unrolled.c  output.c  parsetree.py  polynomials.py  requirements.txt  simpleblaat.py  tree-analyse-l-0.py
qualitative-research/: count-loops.py  find-iterator-expressions.py  loop-offsets.py  na-decompilatie-godot.csv  na-decompilatie-openssl.csv  realcode.py  rerolled-coreutils.csv  rerolled-godot.csv  rerolled-openssl.csv
regel-analyse/: analyseer-file.py  analyseer-voor-rerolled.py  coreutils-stripped.csv  coreutils.csv  godot-stripped.csv  godot.csv  na-decompilatie-coreutils.csv  na-decompilatie-godot.csv  na-decompilatie-openssl.csv  na-decompilatie.csv  openssl-stripped.csv  openssl.csv  rerolled-coreutils.csv  rerolled-godot.csv  rerolled-openssl.csv  rerolled-stripped.csv  rerolled.csv  vergelijking.csv  (+10 more)
(+9507 files in other folders)
