[project]
name = "rolpens"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "requests==2.32.3",
    "tree-sitter==0.24.0",
    "urllib3==2.4.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
